[project]
name = "mlflow-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.14.0",
    "loguru>=0.7.3",
    "marimo>=0.23.5",
    "mlflow>=3.12.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
    "ruff>=0.15.12",
]

[tool.marimo.runtime]
auto_run = false
